--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,10 +14,15 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Find requirements.txt
+      id: find-requirements
+      run: |
+        REQUIREMENTS=$(git ls-files '*.txt' | grep 'requirements.txt' || true)
+        echo "::set-output name=requirements_path::$REQUIREMENTS"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ../../requirements.txt
+        pip install -r ${{ steps.find-requirements.outputs.requirements_path }}  # Install requirements.txt
         pip install pylint
     - name: Analysing the code with pylint
       run: |
